# studyflow-ai

./: README.md  pyproject.toml  requirements.txt
scripts/: evaluate_qna.py
studyflow_ai/: __init__.py  cli.py  runner.py  session.py  studyflow_agent.py
studyflow_ai/agents/: __init__.py  coordinator.py  coordinator_agent.py  ingestion.py  ingestion_agent.py  monitoring.py  monitoring_agent.py  planner_agent.py  planning.py  tutor_agent.py  tutoring.py
studyflow_ai/config/: __init__.py  constants.py  logging.py  settings.py
studyflow_ai/memory/: __init__.py  academic_memory.py  conversation_memory.py  user_memory.py
studyflow_ai/models/: __init__.py  agent_io.py  events.py  requests.py  responses.py  schemas.py  state.py
studyflow_ai/prompts/: __init__.py  coordinator.txt  ingestion.txt  monitoring.txt  planning.txt  tutoring.txt
studyflow_ai/repositories/: __init__.py  academic_repository.py  base.py  db_client.py  in_memory.py  persistent.py  user_repository.py
studyflow_ai/services/: __init__.py  calendar_service.py  notification_service.py  ocr_service.py  storage_service.py  vector_db.py  vector_service.py
studyflow_ai/tools/: __init__.py  calendar_sync.py  calendar_tool.py  db_operations.py  knowledge_base.py  notification_tool.py  notifications.py  ocr_image.py  parse_document.py  progress_tool.py  syllabus_parser_tool.py  vector_search_tool.py
studyflow_ai/utils/: __init__.py  telemetry.py
studyflow_ai/workflows/: __init__.py  academic_qna.py  create_study_plan.py  ingest_syllabus.py  progress_monitor.py  (+1 more)
tests/: __init__.py
(+5 files in other folders)
