[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "studyflow_ai"
version = "0.1.0"
description = "StudyFlow AI: An academic assistant powered by Google ADK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.0.0",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9.0",
    "google-cloud-vision>=3.4.0",
    "pinecone-client>=3.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    # Suppress the google-adk internal BaseAgentConfig deprecation warning.
    # This originates inside the installed library (LlmAgentConfig subclasses BaseAgentConfig)
    # and cannot be fixed from our application code.
    "ignore::DeprecationWarning:google.adk",
    "ignore:BaseAgentConfig is deprecated:DeprecationWarning",
]
